--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -8,3 +8,4 @@ spring.datasource.password=sa
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
