Step 3 test profile replaced

--- a/build.gradle
+++ b/build.gradle
@@ -100,9 +100,10 @@ liquibase {
     }
 }
 
+
 test {
     useJUnitPlatform()
-//    finalizedBy jacocoTestReport
+    finalizedBy jacocoTestReport
 }
 
 jacocoTestReport {
